--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<release>15</release>
+					<release>11</release>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -88,7 +88,7 @@
 							<archive>
 								<manifest>
 									<mainClass>
-										demo.KafkaDemo
+										demo.SparkStreamingReadDataDemo
 									</mainClass>
 								</manifest>
 							</archive>
